--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts --api"
   },
   "keywords": [],
   "author": "",
@@ -38,7 +38,7 @@
     "formidable": "^3.5.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
-    "slug": "^10.0.0",
+    "slug": "^9.1.0",
     "uuid": "^11.0.3"
   }
 }
